--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -13,151 +13,128 @@
         android:layout_height="61dp"
         android:text="7"
         android:layout_marginTop="32dp"
-        android:layout_marginStart="120dp"
-        app:layout_constraintEnd_toStartOf="@id/button24"
+        android:layout_marginStart="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-        android:id="@+id/button24"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="4"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="120dp"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button22"
-        app:layout_constraintTop_toTopOf="@+id/button22" />
-
-    <Button
-        android:id="@+id/button23"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="1"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="120dp"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button24"
-        app:layout_constraintTop_toTopOf="@+id/button24" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="AC"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="120dp"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button23"
-        app:layout_constraintTop_toTopOf="@+id/button23" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button12"
         android:layout_width="58dp"
         android:layout_height="61dp"
         android:text="8"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="64dp"
-        app:layout_constraintEnd_toStartOf="@+id/button22"
-        app:layout_constraintStart_toStartOf="@+id/button22"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="64dp"
-        android:text="5"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.449"
-        app:layout_constraintStart_toStartOf="@+id/button12"
-        app:layout_constraintTop_toTopOf="@+id/button12" />
-
-    <Button
-        android:id="@+id/button14"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="2"
-        app:layout_constraintStart_toStartOf="@+id/button13"
-        app:layout_constraintTop_toTopOf="@+id/button23" />
-
-    <Button
-        android:id="@+id/button15"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="0"
-        app:layout_constraintStart_toStartOf="@+id/button13"
-        app:layout_constraintTop_toTopOf="@+id/button4" />
+        app:layout_constraintStart_toEndOf="@id/button22"
+        app:layout_constraintTop_toTopOf="@id/button22" />
 
     <Button
         android:id="@+id/button16"
         android:layout_width="58dp"
         android:layout_height="61dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="32dp"
         android:text="9"
-        app:layout_constraintEnd_toStartOf="@+id/button22"
-        app:layout_constraintStart_toStartOf="@+id/button12"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/button12"
+        app:layout_constraintTop_toTopOf="@id/button22" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="÷"
+        app:layout_constraintStart_toEndOf="@id/button16"
+        app:layout_constraintTop_toTopOf="@id/button22" />
+
+    <Button
+        android:id="@+id/button24"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="4"
+        app:layout_constraintStart_toStartOf="@id/button22"
+        app:layout_constraintTop_toBottomOf="@id/button22" />
+
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="5"
+        app:layout_constraintStart_toEndOf="@id/button24"
+        app:layout_constraintTop_toTopOf="@id/button24" />
 
     <Button
         android:id="@+id/button17"
         android:layout_width="58dp"
         android:layout_height="61dp"
         android:text="6"
-        app:layout_constraintStart_toStartOf="@+id/button16"
-        app:layout_constraintTop_toTopOf="@+id/button24" />
-
-    <Button
-        android:id="@+id/button18"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="3"
-        app:layout_constraintStart_toStartOf="@+id/button16"
-        app:layout_constraintTop_toTopOf="@+id/button23" />
-
-    <Button
-        android:id="@+id/button19"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:text="="
-        app:layout_constraintStart_toStartOf="@+id/button16"
-        app:layout_constraintTop_toTopOf="@+id/button4" />
-
-    <Button
-        android:id="@+id/button20"
-        android:layout_width="58dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="32dp"
-        android:text="÷"
-        app:layout_constraintEnd_toStartOf="@+id/button22"
-        app:layout_constraintStart_toStartOf="@+id/button16"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/button13"
+        app:layout_constraintTop_toTopOf="@id/button24" />
 
     <Button
         android:id="@+id/button21"
         android:layout_width="58dp"
         android:layout_height="61dp"
         android:text="×"
-        app:layout_constraintStart_toStartOf="@+id/button20"
-        app:layout_constraintTop_toTopOf="@+id/button24" />
+        app:layout_constraintStart_toEndOf="@id/button17"
+        app:layout_constraintTop_toTopOf="@id/button24" />
+
+    <Button
+        android:id="@+id/button23"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="1"
+        app:layout_constraintStart_toStartOf="@id/button24"
+        app:layout_constraintTop_toBottomOf="@id/button24" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="2"
+        app:layout_constraintStart_toEndOf="@id/button23"
+        app:layout_constraintTop_toTopOf="@id/button23" />
+
+    <Button
+        android:id="@+id/button18"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="3"
+        app:layout_constraintStart_toEndOf="@id/button14"
+        app:layout_constraintTop_toTopOf="@id/button23" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="58dp"
         android:layout_height="61dp"
         android:text="-"
-        app:layout_constraintStart_toStartOf="@+id/button20"
-        app:layout_constraintTop_toTopOf="@+id/button23"/>
+        app:layout_constraintStart_toEndOf="@id/button18"
+        app:layout_constraintTop_toTopOf="@id/button23" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="0"
+        app:layout_constraintStart_toStartOf="@id/button23"
+        app:layout_constraintTop_toBottomOf="@id/button23" />
+
+    <Button
+        android:id="@+id/button19"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="="
+        app:layout_constraintStart_toEndOf="@id/button15"
+        app:layout_constraintTop_toTopOf="@id/button15" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="58dp"
+        android:layout_height="61dp"
+        android:text="AC"
+        app:layout_constraintStart_toEndOf="@id/button19"
+        app:layout_constraintTop_toTopOf="@id/button15" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="58dp"
         android:layout_height="61dp"
         android:text="+"
-        app:layout_constraintStart_toStartOf="@+id/button20"
-        app:layout_constraintTop_toTopOf="@+id/button4" />
+        app:layout_constraintStart_toEndOf="@id/button4"
+        app:layout_constraintTop_toTopOf="@id/button15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
